# evsy

./: .env.example  .gitignore  AI.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bump_version.py  docker-compose.dev.yaml  docker-compose.yaml  mkdocs.yml  package-lock.json  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  bump-version.yml  frontend.yml  semantic-pr.yml
backend/: .coverage  .dockerignore  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml  test.db
backend/app/: .coverage  crud.py  database.py  deps.py  factory.py  main.py  models.py  schemas.py  settings.py
backend/app/api/: deps.py
backend/app/api/v1/routers/: events.py  fields.py  generic.py  tags.py
backend/app/api/v1/routes/: admin.py  auth.py  events.py  fields.py  generic.py  tags.py
backend/app/core/: database.py  guard.py  handlers.py  models.py  startup.py
backend/app/database/: database.py
backend/app/database/seeds/: __main__.py  reset_db.py  seed_events.py  seed_fields.py  seed_tags.py
backend/app/models/: __init__.py
backend/app/modules/admin/io/: router.py  schemas.py  service.py
backend/app/modules/admin/reset/: router.py  service.py
backend/app/modules/admin/seed/: router.py  service.py
backend/app/modules/auth/: crud.py  models.py  oauth.py  router.py  schemas.py  service.py  token.py
backend/app/modules/events/: crud.py  models.py  schemas.py  service.py
backend/app/modules/events/seed/: seeder.py
backend/app/modules/fields/: crud.py  models.py  schemas.py
backend/app/modules/fields/seed/: seeder.py
backend/app/modules/tags/: crud.py  models.py  schemas.py
backend/app/modules/tags/seed/: seeder.py
backend/app/schemas/: __init__.py
backend/app/seeds/: __main__.py  reset_db.py  seed_events.py  seed_fields.py  seed_tags.py
backend/app/shared/: models.py  service.py
backend/app/tests/: conftest.py  test_events.py  test_fields.py  test_tags.py
backend/migrations/: env.py
backend/migrations/versions/: 23a12684fe55_add_auth.py  6436e6c56133_add_custom_links_to_events.py  8ce9f4429c2c_init_database.py  8e1434cdf271_add_performance_indexes.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_events_extended.py  test_fields.py  test_fields_extended.py  test_generic_extended.py  test_integration_new.py  test_services.py  test_settings.py  test_startup.py  test_tags.py
docs/: index.md
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  components.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/evsy-frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/evsy-frontend/src/: App.vue  index.css  main.ts
frontend/evsy-frontend/src/components/: theme-provider.vue
frontend/evsy-frontend/src/layout/: DefaultLayout.vue
frontend/evsy-frontend/src/lib/: api.ts  fields.ts  useApiErrorToast.ts  useSuccessToast.ts  utils.ts
frontend/evsy-frontend/src/pages/: EventsPage.vue  FieldDetailsPage.vue  FieldsPage.vue  TagsPage.vue
frontend/evsy-frontend/src/router/: index.ts
frontend/evsy-frontend/src/types/: index.ts
frontend/src/: App.vue  fonts.d.ts  index.css  main.ts
frontend/src/modules/auth/: api.ts  router.ts  types.ts
frontend/src/modules/events/: types.ts
frontend/src/modules/fields/: api.ts  types.ts
frontend/src/modules/switchboard/: api.ts  router.ts  types.ts
frontend/src/modules/tags/: router.ts  types.ts
frontend/src/modules/user/: router.ts
frontend/src/router/: index.ts  routes.ts
frontend/src/shared/config/: appConfig.ts
(+333 files in other folders)
