[project]
name = "evsy-backend"
version = "0.1.0"
description = "Evsy Backend is an API for managing and documenting product analytics events, properties, and tags. It provides an interface for storing event definitions and metadata in a structured way."
authors = [
    {name = "Ivan Skvortsov", email = "ivanskv2000@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.15.2"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
httpx = "^0.28.1"
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
faker = "^37.1.0"


[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["app/tests"]

[tool.isort]
profile = "black"

[tool.coverage.run]
data_file = ".coverage"

[tool.poetry]
package-mode = false

